fixed some spacing on the project cards

--- a/site.css
+++ b/site.css
@@ -176,7 +176,7 @@ body{
 .projectImage{
     display: flex;
     height: 70%;
-    width: 90%;
+    width: 100%;
 }
 
 .projectImage img{
@@ -197,7 +197,7 @@ body{
     width: 95%;
     height: 100%;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -246,6 +246,7 @@ body{
     align-items: center;
     width: 100%;
     height: 100%;
+    margin-right: 2%;
 }
 
 .imageChooser{
